--- a/Tradeoffs.Rmd
+++ b/Tradeoffs.Rmd
@@ -34,8 +34,6 @@ theme_set(theme_minimal())
 ```
 
 
-Trade-offs 
-
 # Fast, cheap, good: pick two
 
 
@@ -44,36 +42,46 @@ Trade-offs
 knitr::include_graphics("Pick2.png", dpi=600)
 ```
 
-Go into any programmers' cubicle farm and you are almost guaranteed to see some version of this diagram. Yes, yes, it's sort of funny, but more importantly, there's a deeper wisdom here. In short, when there is a limited resource---resources, energy, time---then you cannot have it all. You need to prioritize one thing at the cost of another^[Or, as the aphorism goes, "you aren't prioritizing if you aren't saying no."].
+Go into any programmers' cubicle farm and you are almost guaranteed to see some version of this diagram. Yes, yes, it's sort of funny, but more importantly, there's a deeper wisdom here. In short, when one or more resources are limiting---money, energy, time, nutrients---you cannot have it all. You need to prioritize one thing at the cost of another^[Or, as the aphorism goes, "you aren't prioritizing if you aren't saying no."].
 
-It is worth noting that _something_ is virtually always limiting, in all sorts of contexts. A public health department has a limited budget, a busy student has limited time (or attention), and a growing _Daphnia_ has only so much energy and resources. It is worth noting that the limiting resource can be information, too! Remember that diagnostic tests could gain specificity at the cost of sensitivity, and vice versa. There is only so much information in a diagnostic test. You can use that information to be improve the ability to discern truly infected individuals (i.e., diagnostic sensitivity), but that comes at the cost of being less certain about the status of negatives  (reduced specificity). 
+It is worth noting that _something_ is virtually always limiting, in all sorts of contexts. A public health department has a limited budget, a busy student has limited time (or attention), and a growing _Daphnia_ has only so much energy and resources. It is worth noting that the limiting resource can be information, too! Remember that diagnostic tests could gain specificity at the cost of sensitivity, and vice versa. There is only so much information in a diagnostic test. You can use that information to improve the ability to detect infections (i.e., improve the diagnostic sensitivity), but that comes at the cost of increased false positives (reduced specificity). 
 
-It is also worth noting that there are almost always competing interests. The public health department needs to educate health care workers, government officials, and the general public about health threats in hopes of preventing disease;  test for a wide range of infectious and non-infectious diseases, collect data on current trends in disease incidence for numerous sources; and devise and implement responses to improve public health^[And this is the course-level of their duties!]. A _Daphnia_ invests its limited energy and resources among growth, maintenance (e.g., anti predator defenses & behaviors, foraging, etc.), and reproduction^[I assume you know the many competing interests of the time and attention of a busy student!].      
+Individuals and organizations almost always have competing interests. The public health department needs to _educate_ health care workers, government officials, and the general public about health threats in hopes of preventing disease; _test_ for a wide range of infectious and non-infectious diseases, _collect data_ on current trends in disease incidence for numerous sources; and devise and implement _responses_ to improve public health^[And this is only the coarse level of their duties!]. An organism like our pet _Daphnia magna_ invests its limited energy and other resources among growth, maintenance (e.g., anti predator defenses & behaviors, foraging, etc.), and reproduction.Students must...well, I assume you have a keen sense of the many interests competing for your limited time and attention!.      
 
-# Optimal _Daphnia_ and more
+# What to optimize
 
-The question, then, is  how to allocate these limited resources among the many competing interests or needs. The simple answer is that we should try to use them optimally. That is, we should allocate resources so as to maximize...something^[Or many things. Indeed, this idea of optimality is a bit suspect because it overly simplifies the value or utility we try to maximize, the relationships between things we can change and those values, and the predictability of the whole thing. Moreover, sometimes being good enough is, well, good enough!]. But there's the rub. What are we trying to maximize (or minimize)? It might seem straightforward, but I assure you, it is not.
+The question, then, is  how to allocate these limited resources among the many competing interests or needs. The simple answer is that we should try to use them optimally. That is, we should allocate resources so as to maximize...something. But there's the rub. What are we trying to maximize (or minimize)? It might seem straightforward, but I assure you, it is not.
 
-A perfectly rational public health department  might try to minimize human deaths in the population they serve, or maximize years of life or quality of life. They might realize that money and time spent on smoking prevention programs is much more effective than the same amount spent on smoking cessation programs, and both are more effective at maximizing quality years of life than, say, screening travelers for novel zoonotic pathogens that might, but probably will not, cause a global pandemic. Similarly, collecting data on which segments of a population are likely to smoke (or vape^[In the U.S. we tend to treat vaping as a gateway to smoking, whereas in the U.K. they think of vaping as a less-bad-for-you replacement for smoking. A lot of this comes from the public's perception of the morality of certain behaviors. It is hard to be a truly rational health department.]) can make for more targeted, effective anti-smoking campaigns, which might make that worth the extra effort. Or not. So in sum, a rational public health department might increase its smoking prevention programs at the cost of reducing its efforts to screen for less common or less important diseases. That is how they would navigate the trade-off.
+A perfectly rational public health department might try to minimize human deaths in the population they serve, or maximize years of life, or the quality-adjusted years of life ([QALYs](https://en.wikipedia.org/wiki/Quality-adjusted_life_year)). All of those are fine metrics, but they might lead you to prioritize different things. Similarly, some students might prioritize their GPA while others prioritize their learning and a few might just being trying not to flunk long enough so that they can win the intramural frisbee golf championship^[No judgement. We take you as you come.]! 
 
-When it comes to what the _Daphnia_ are optimizing, things appear to be much simpler. Like all living organisms, _Daphnia_ should maximize their fitness^[![](Mic-Drop-TV-Tropes.png)]. But what exactly does that mean? There are, literally, books written on what fitness is and how it can and should be measured. Let us use the common, but imperfect definition as the expected number of offspring (or grand-offspring) in the population. An optimal _Daphnia_ should take whatever strategy maximizes the number of offspring it produces. This might, initially, suggest it should just pump out the clonal offspring, early and often! But, it is worth noting, that reproduction comes at the cost of growth---and larger individuals can produce more offspring per clutch---and maintenance, meaning there is a reduced chance of surviving to reproduce in the future.  So reproduction now comes at the cost of future growth and reproduction. 
+When it comes to what the _Daphnia_ are optimizing, things appear to be much simpler. Like all living organisms, _Daphnia_ should maximize their fitness^[![](Mic-Drop-TV-Tropes.png)]. Let us not delve into the important, but nuanced discussion of what exactly fitness is or how we should measure it^[There are volumes written on this one subject!]. Rather, let us use the common, but imperfect definition that fitness is the expected number of offspring (or grand-offspring) of individuals. An optimal _Daphnia_ should take whatever strategy maximizes the number of offspring it produces. It should do this because those _Daphnia_ with suboptimal strategies aren't found very much any more, thanks to natural selection^[Or at least that's the assumption we're going to run with.]. 
+
+
+# How to optimize or strategize
+
+You will see I've mentioned "strategy" a few times. This is not far off from what you're probably imagining. The couny health department, for instance, might realize that money and time spent on smoking _prevention_ programs is much more effective than the same amount spent on smoking _cessation_ programs^[And both are more effective at maximizing quality years of life than, say, screening travelers for novel zoonotic pathogens that might, but probably will not, cause a global pandemic.], so their strategy would be to invest more in the former and less in the latter to maximize QALYs in the county. Or they might spend time and money to collect data on which segments of a population are likely to smoke (or vape^[In the U.S. we tend to treat vaping as a gateway to smoking, whereas in the U.K. they think of vaping as a less-bad-for-you replacement for smoking. A lot of this comes from the public's perception of the morality of certain behaviors. It is hard to be a truly rational health department.]) so they can use more targeted, effective anti-smoking campaigns, on the assumption they would yield more QALYs per buck. Those are all quite reasonable strategies. 
+
+Your strategy as a student would involve the time and method of preparing for classes and studying, the relative amounts for different classes, and the time you spend on the folf course. That intramural prize might come at the cost of a B+ average, but the sacrifice will only make it that much sweeter.
+
+The strategy of our pet _Daphnia_, however, is a bit different. We do not assume they are making choices, but rather have more or less fixed strategies^[Although we can also consider "plastic" strategies that respond in predictable ways to different or varying environments. But again, we assume a genetic basis for them as opposed to learning and cognition.] that incorporates all the dimensions of its life history, such as its growth, rate of maturity, longevity, reproductive output, etc. While we might initially think an optimal _Daphnia_ should simply mature immediately and pump out clonal offspring as often as possible, we should remember that there are trade-offs. That (early) reproduction comes at the cost of growth---and larger individuals can produce more offspring per clutch---and maintenance---meaning there is a reduced chance of surviving to reproduce in the future.  So reproduction _now_ comes at the cost of _future_ growth and reproduction. So maybe a better strategy would be to grow to a certain size and then start to reproduce like bonker balls.
+
 
 # There is no single optimum 
 
-Before we get tied in knots thinking about what an optimal _Daphnia_ (or any other critter) should do, it is worth noting two things. First, there are many winning strategies! Just look around you! You can probably see very long-lived trees that might take decades before the even begin to reproduce and very short-lived flies that live months and that might reproduce within a matter of days. Or think of you, in between the two. The tree might send out bazillions^[Bigger than a handful, less than a googolplex.] of seeds every year, while even the most ambitious human female will have several dozen over a lifetime^[The record, according to [Wikipedia](https://en.wikipedia.org/wiki/List_of_people_with_the_most_children) is 69 children to a monogamous couple, although the numbers for male monarchs, religious leaders, and a weird collection of business men, polygamists, and sperm donors have eye-watering numbers! ]. They and we and all sorts of other organisms have taken on all sorts of different strategies and the mere fact of their existence suggests that these strategies _work_! 
+Before we get tied in knots thinking about what an optimal _Daphnia_ (or any other critter or student) should do, it is worth noting two things. First, there are many winning strategies! Just look around you! You can probably see very long-lived trees that might take decades before the even begin to reproduce and very short-lived flies that live months and that might reproduce within a matter of days. Or think of you, in between the two. The tree might send out bazillions^[Bigger than a handful, less than a googolplex.] of seeds every year, while even the most ambitious human parent will have several dozen over a lifetime^[The record, according to [Wikipedia](https://en.wikipedia.org/wiki/List_of_people_with_the_most_children) is 69 children to a monogamous couple, although the numbers for male monarchs, religious leaders, and a weird collection of business men, polygamists, and sperm donors have eye-watering numbers! ]. They and we and all sorts of other organisms have taken on all sorts of different strategies and the mere fact of their existence^[Remember, if they were sub-par they would be outpaced by those with more fit and fecund strategies. Good old evolution!] suggests that these strategies _work_! 
 
-Second, and relatedly, what is "optimal" depends on context. Are you liable to be eaten by a predator any day now? Well, reproducing sooner than later seems like a good plan. Can you expect to have more resources in the future to take good care of your young and thus ensure their survival? That seems like a good bet. In short, only when given something to maximize _and_ a context can we perhaps predict what should be optimal.   
+Second, and relatedly, what is "optimal" depends on context. Are you liable to be eaten by a predator any day now? Well, reproducing sooner than later seems like a good plan. Can you expect to have more resources in the future to take good care of your young and thus ensure their survival? These investments seems like a good bet. In short, only when given something to maximize _and_ a context can we perhaps predict what should be optimal.   
 
 
 # Marginal value or the diamond--water paradox
 
-One of the key insights in many fields of study is that trade-offs between two things of value do _not_ mean a simple one-to-one relationships or even a constant ratio (e.g., a dollar towards smoking prevention is worth five towards smoking cessation). Instead, the value of an investment depends on context (as we've just noted) and how much you already have of the thing(s) you might invest in.
+One of the key insights in many fields of study is that trade-offs between two things of value do _not_ mean a simple one-to-one relationships or even a constant ratio (e.g., a dollar of smoking _prevention_ programs is equivalent to five dollars of smoking _cessation_ programs). Instead, the value of an investment or the winningness of a strategy depends on context (as we've just noted)...and on how much you already have of the thing(s) you might invest in.
 
-Consider a classic economic paradox, called the [paradox of value](https://en.wikipedia.org/wiki/Paradox_of_value). Water is an essential resource for life, yes? But diamonds, which are not particularly useful outside of some industrial processes, are much, much more expensive! You can get a gallon of water for a dollar at the store or pennies from your tap at home. Indeed, you can get it for free at any drinking fountain. Diamonds, on the other hand, cost ridiculous amounts^[And [lose much](https://www.huffpost.com/entry/diamonds-are-bullshit_b_3708562) of [their value](https://99percentinvisible.org/episode/diamonds-articles-of-interest-11/) as soon as you walk out of the store. ]. Why is that?^[I recommend this [Planet Money](https://www.npr.org/sections/money/2018/07/25/632473671/the-diamond-water-paradox) story; it's far more entertaining that most accounts.]  
+Consider a classic economic paradox, called the [paradox of value](https://en.wikipedia.org/wiki/Paradox_of_value) or the diamond--water paradox. Water is an essential resource for life, yes? But diamonds, which are not particularly useful outside of some industrial processes, are much, much more expensive! You can get a gallon of water for a dollar at the store or pennies from your tap at home. Indeed, you can get it for free at any drinking fountain. Diamonds, on the other hand, cost ridiculous amounts^[And [lose much](https://www.huffpost.com/entry/diamonds-are-bullshit_b_3708562) of [their value](https://99percentinvisible.org/episode/diamonds-articles-of-interest-11/) as soon as you walk out of the store. ]. Why is that?^[I recommend this [Planet Money](https://www.npr.org/sections/money/2018/07/25/632473671/the-diamond-water-paradox) story; it's far more entertaining that most accounts.]  
 
-The simple version is that you have enough water already. If you were, say, dying of thirst you would probably pay a lot for that first gallon of water! You'd probably happily give up all your diamonds (or as the ridiculous advertisement say, "[three months salary](https://www.bbc.com/news/magazine-27371208)") for enough water not to die! I know I would!  You'd probably even pay a lot for the second and third gallon. But by the 5th it might be less advantageous. You'd have to carry it or store it, which is inconvenient. By the 10th or 1000th you probably wouldn't pay much at all. That is to say, that the _marginal_ value, the value of each extra gallon of water, starts out very high, but declines pretty quickly.  Diamonds, on the other hand are worth about the same whether you have one or ten, if you're a diamond person; their marginal value declines much more slowly. 
+The simple version is that you have enough water already. If you were, say, dying of thirst you would probably pay a lot for that first gallon of water! You'd probably happily give up all your diamonds (or as the ridiculous advertisements say, "[three months salary](https://www.bbc.com/news/magazine-27371208)") for enough water not to die! I know I would!  You'd probably even pay a lot for the second and third gallon. But by the 5th it might be less advantageous. You'd have to carry it or store it, which is inconvenient. By the 10th or 1000th you probably wouldn't pay much at all. That is to say, that the _marginal_ value, the value of each extra gallon of water, starts out very high, but declines pretty quickly.  Diamonds, on the other hand are worth about the same whether you have one or ten; their marginal value declines much more slowly. 
 
-What does this mean for our trade-offs? Simply that a key part of what is optimal depends on how much you already have. If you are a health department who already invests a great deal in smoking prevention, investing even more may not get you much bang for your buck. Instead, investing in sex education, if you spend only paltry amounts currently, could lead to large gains. Similarly, a _Daphnia_ that is already large might not gain much from investing in growth, but could instead devote those resources to maintenance or reproduction. Or one that is near the end of its life might not bother with maintenance or growth, because it is probably going to die soon no matter what it tries, but instead invest in reproduction, going out with a bang!^[No, _Daphnia_ do not do that metaphorically or euphemistically.]
+What does this mean for our trade-offs? Simply that a key part of what is optimal depends on how much you already have. If you are a health department that already invests a great deal in smoking prevention, investing even more may not get you much bang for your buck. Instead, investing in sex education, if you spend only paltry amounts currently, could lead to large gains in QALYs. Similarly, a _Daphnia_ that is already large might not gain much from investing in growth, but could instead devote those resources to maintenance or reproduction. Or one that is near the end of its life might not bother with maintenance or growth, because it is probably going to die soon no matter what it tries, but instead invest in reproduction, going out with a bang!^[No, _Daphnia_ do not do that metaphorically or euphemistically.]
 
 
 Once you start thinking about trade-offs, you see them everywhere. Here are a few examples:
@@ -82,7 +90,7 @@ Once you start thinking about trade-offs, you see them everywhere. Here are a fe
 
 Public health is the medical land of trade-offs. Not that individual medicine doesn't involve trade-offs (name brand or generic?), but when it comes to populations you are always pitting one group's interests against another's. There is no way those people get paid enough!
 
-*   One thing we heard a lot in this current COVID-19 pandemic is that the cure might be worse than the disease. While this was often used to denigrate even basic public health interventions, there is an important point that should not get lost in the political back-and-forth. Keeping people home from schools and work has real costs. Kids get a _lot_ out of being at school, from a better education to necessary social interactions to free lunches and other services. Keeping them home might reduce their risk of getting COVID-19, but it comes at a cost. Sometimes these costs clearly outweigh the benefits, though it can be difficult to know^[I highly recommend [this podcast](https://overcast.fm/+U9ZGRpCww) on the costs of interventions, like closing trains down until all of the rails were checked for problems after a train crash or moving people out of the danger zone around the Fukushima Daiichi nuclear accident. ]. 
+*   One thing we heard a lot in this current COVID-19 pandemic is that the cure might be worse than the disease. While this was often used to denigrate even basic public health interventions, there is an important point that should not get lost in the political back-and-forth. Keeping people home from schools and work has real costs. Kids get a _lot_ out of being at school, from a better education to necessary social interactions to free lunches and other services. Keeping kids home might reduce their risk of getting COVID-19, but it comes at some cost. Sometimes these costs clearly outweigh the benefits, though it can be difficult to know^[I highly recommend [this podcast](https://overcast.fm/+U9ZGRpCww) on the costs of interventions, like closing trains down until all of the rails were checked for problems after a train crash or moving people out of the danger zone around the Fukushima Daiichi nuclear accident. ]. 
 *   Recommendations for when and who to screen for various cancers (e.g., with mammograms, colonoscopies, etc.) often involve a trade-off between the costs---including the monetary costs, but also those of unnecessary worry, treatment, and surgeries that comes from false positives---and the costs of not finding these cancers early enough to intervene. Vaccines, too, involves trade-offs. There are side-effects and costs to vaccination. Are those costs outweighed by the reduced disease burden on the population?
 *  Chickens, pigs, and cattle are often culled to prevent the spread of disease between places or into humans. There is a clear economic cost to culling and often an uncertain benefit (would the disease really have spread?). This area is rife with trade-offs.  
 
@@ -90,7 +98,7 @@ Public health is the medical land of trade-offs. Not that individual medicine do
 
 Evolution often, some would say _always_, deals with trade-offs. The perfect organism would start reproducing early, have huge numbers of offspring all the time, and live forever. Clearly that's impossible^[But what about [lobsters](https://www.livescience.com/55392-do-lobsters-live-forever.html)?], so organisms that are the product of evolution trade-off one thing against another.  
 
-*  Should an organism invest in adaptive immune system with immune memory and all of the other bells and whistles? Immune systems are expensive to build and maintain, and they keep trying to do stuff like attack one's own tissues if not carefully regulated. Plus, they take a long time to work, like weeks from initial infection to protective immunity. For a mouse that lives only 4--5 weeks on average, it's an open question whether having all of that stuff is actually worth the cost. I mean, how often can a mouse expect to be exposed to the same pathogen twice before it gets eaten or starves to death? Perhaps not often! The "Pace of life hypothesis" suggests that short-lived, fast-paced species---those with the rock star syndrome---probably should not invest much in maintenance and instead just pump out babies as soon as they can. 
+*  Should an organism invest in an adaptive immune system with immune memory and all of the other bells and whistles? Immune systems are expensive to build and maintain, and they keep trying to do stuff like attack one's own tissues if not carefully regulated. Plus, they take a long time to work, like weeks from initial infection to protective immunity. For a mouse that lives only 4--5 weeks on average, it's an open question whether having all of that stuff is actually worth the cost. I mean, how often can a mouse expect to be exposed to the same pathogen twice before it gets eaten or starves to death? Perhaps not often! The "Pace of life hypothesis" suggests that short-lived, fast-paced species---those with the rock star syndrome---probably should not invest much in maintenance and instead just pump out babies as soon as they can^[In a very real sense the adaptive immune system is a form of insurance, a way to minimize the costs of accidents (or infections) by paying a bit all the time. Weird, huh?]. 
 * A similar response can be seen when individuals are infected with pathogens that might kill or castrate them. _Daphnia_, for instance, infected with a castrating parasites reproduce earlier, even though it's a smaller brood, just to get some out while they can! 
 *  You can see a similar pattern even in human populations. How do longevity or rates of early childhood mortality relate to family size? Pretty well! 
 *  We can even see viruses and other parasites as facing trade-offs. If a virus replicates very fast it might attain a huge virus population, increasing the host's infectiousness, but that may comes at the cost of a shorter infectious period and thus fewer opportunities to get passed on. Indeed, this is called^[Do evolutionary ecologists like to name their hypotheses? Apparently...] the "trade-off hypothesis" for the evolution of parasite virulence. More on this slippery beast later. 
