Sm updates to BHC, Models Fail, Writing

--- a/OnWriting.Rmd
+++ b/OnWriting.Rmd
@@ -73,25 +73,24 @@ To be clear, I am not implying that you write this paper in the first person (e.
 # A collection of thoughts, advice, pet peaves, and rants^[Some repetitive of the above. I really mean them!]
 
 * **Papers and data do not conclude; authors do**. Studies do not aim or set out or examine, the authors do, but they might show or illustrate or demonstrate something or other. 
-* **Neither papers nor authors PROVE OR DISPROVE anything**. Proofs are for mathematicians, not for us lowly scientists. Our conclusions are always, always tentative. Including the law of (universal) gravitation^[And just for completeness, No, Isaac Newton did not "prove" gravity exists, even setting aside the silly apple story. Of course gravity exists! The evidence of it is in and around us all the time, every day! No one doubted its existence. What Newton did was 1) write down some equations that make lovely predictions about its actions and 2) showed that these predictions worked just as well for planets as for stuff on Earth. But honestly, we still don't know what gravity is, exactly, or really even how it works. We just know its effects.].
+* **Neither papers nor authors PROVE OR DISPROVE anything**. Proofs are for mathematicians, not for us lowly scientists. Our conclusions are always, always tentative. Including the law of (universal) gravitation^[And just for completeness, No, Isaac Newton did not "prove" gravity exists, even setting aside the silly apple story. Of course gravity exists! The evidence of it is in and around us all the time, every day! No one doubted its existence. What Newton did was 1) write down some equations that make lovely predictions about its actions and 2) showed that these predictions worked just as well for planets as for stuff on Earth. But honestly, we still don't know what gravity is, exactly, or really even how it works. We just know its effects.]. Instead, talk about the weight of evidence for or against an assertion. 
 * **Finish your comparisons**. If you wrote, for instance, that "Gold doubloons make better bait for Leprechauns," your reader is likely screaming (silently, ineffectually), _Than what?! Gold bullion? Chocolate? Lucky charms?_ It might be obvious to you, but the reader is, thankfully, not in your head. 
 * **Be precise when possible**. Sometimes it is enough to say that most children get more candy at Halloween than Easter, but more often it is important to know how much more. One extra candy corn? Twice as much chocolate? And what's the unit of comparison anyway? Mass? Calories? How long it lasts? Be similarly precise about the logic or mode of action. Is the idea that since kids have some control over how many houses they "hit" while trick-or-treating their haul reflects the time available to them and their efficiency whereas during a typical Easter egg hunt there is a finite amount of candy that is then divided amongst the participants? Or is it that parents purchase less candy for their own kids during Easter than for the neighborhood during Halloween because they don't want to be viewed as stingy? These are obviously very different mechanisms that might lead to the same pattern. 
 * **Use connecting or comparing words to provide guidance for the reader**. If you leave it to the reader to connect the dots, we probably will not. Also, even a tiny bit of guidance can avoid the staccato of a series of short declarative sentences. For instance, how could you rewrite this? "Smith et al. (1995) found a large tentacle on the short. Victor and Vector (2001) argued it was not actually a tentacle. The isotopic signature was inconsistent with a predator's diet (Rolf et al. 1999)." Wouldn't a "however" and maybe a "moreover" or "indeed" or some such transition sort of word help? 
 * **Avoid extraneous words and casual phrases that add nothing**. For instance, a sentence like, "The authors looked into the validity of Cthulhu by using submersible drones to look for it in the ocean, but came back empty handed"  you would be clearer, more direct, and a bit shorter as, "They did not find Cthulhu in 800 hours of searching with submersibles in the Atlantic."  (Honestly, I might freak out if I have to read "look" at/into/for again. I mean, I would assume they were "looking into" the topic since you're citing them. Instead, what are they doing or finding? How are they "looking" into it? And more importantly, what did they find?)
-* **Avoid weasel words**. If you find yourself trying to qualify or soften your statement, that is a good time to step back and ask yourself what it is, exactly, you are trying to say. Perhaps your subconscious use of weasel words or dread of saying something directly comes from a lack of understanding? Almost always your writing would be improved by removing these words and phrases. In any case, here are some types of weasel words from (Wikipedia)[ https://en.wikipedia.org/wiki/Weasel_word#Forms]: 
+* **Avoid weasel words**. If you find yourself trying to qualify or soften your statement, that is a good time to step back and ask yourself what it is, exactly, you are trying to say. Perhaps your subconscious use of weasel words or dread of saying something directly comes from a lack of understanding? Almost always your writing would be improved by removing these words and phrases. In any case, here are some types of weasel words from [Wikipedia](https://en.wikipedia.org/wiki/Weasel_word#Forms): 
+
+   1.  Numerically vague expressions (for example, "some people", "experts", "many", "evidence suggests")  
+   2.  Use of the passive voice to avoid specifying an authority (for example, "it is said")  
+   3.  Adverbs that weaken (for example, "often", "probably")  
 
 
- 1.   "Numerically vague expressions (for example, "some people", "experts", "many", "evidence suggests")
-2.     "Use of the passive voice to avoid specifying an authority (for example, "it is said")"
-3.     "Adverbs that weaken (for example, "often", "probably")"
-
-
-* **Words to avoid**
+* **Words and phrases to avoid**
   * Feel. I do not care how you "feel"^[Well, as a person, sure, but not in these papers.]! I care how you weigh evidence, think through logic, and so on. 
   * Prove/disprove. See above.
   * It or that, unless it is very, very clear what you are referring to.
   * Adaptation, unless you mean the evolutionary process. Same with evolve.
-  * Any words imply values (i.e., good or bad)
-  * Any words imply goals or intentions of animals (e.g., "Cthulhu wants to ensure its survival.")
+  * Any that imply values (i.e., good or bad)
+  * Any that imply goals or intentions of animals (e.g., "Cthulhu wants to ensure its survival.") This is even worse when one talks of species trying to ensure their persistence. Just walk away from these assertions!
   * Contractions. They smack of informal writing. Sure, I use them in these conversational readings, but I would never do so in a paper intended for publication. Treat your CAP as if it will be published.
-* **Spell out numbers** between zero and ten, and then use numerals for 11 and above6[This _is_ a stylistic thing, and you will see some journal prefer to use numerals all the time. But for my class, please follow my style guide!]. The exception is a measurement or count data, in which case you should use numerals for all of numbers.
+* **Spell out numbers** between zero and ten, and then use numerals for 11 and above^[This _is_ a stylistic thing, and you will see some journal prefer to use numerals all the time. But for my class, please follow my style guide!]. The exception is a measurement or count data, in which case you should use numerals for all of numbers.
