--- a/Models_Fail.Rmd
+++ b/Models_Fail.Rmd
@@ -48,21 +48,21 @@ I think we can break this into three types of issues.
 
 # Parameterization: your inputs are problematic
 
-As the old adage goes, garbage in, garbage out. If you give a perfectly decent model bad inputs or parameters, you'll get bad or even silly results. In biology we often have to make reasonable guesses at parameter values or try to estimate them in sometimes very round-about way. Sometimes we're off...a lot. And that means that the model will give you unrealistic results. If you guess that $R_0$ is 5 but the real value is closer to 1.5, then your model will predict a much, much bigger epidemic than you actually see.
+As the adage goes, garbage in, garbage out. If you give a perfectly decent model bad inputs or parameters, you'll get bad or even silly results. In biology we often have to make reasonable guesses at parameter values or try to estimate them in sometimes very round-about way. Sometimes we're off...a lot. And that means that the model will give you unrealistic results. If you guess that $R_0$ is 5 but the real value is closer to 1.5, then your model will predict a much, much bigger epidemic than you actually see.
 
-The good news is that this is easy to deal with. First, we often create models, compare them to the data, and then refine them, tweaking parameters and so on. Models tend to produce better as we give them better inputs. Second, if there is a parameter you know very little about, you can try a bunch of different values^[Yeah for computers who do this all very fast with very little fuss!] over a range of possibilities and see how your model outputs change. If it changes very little, great! It probably does not matter a lot. If the results vary a lot as you change the value of the parameter, then you a) know it's an important parameter and b) have a good reason to go ask a funding agency to give you money to go try and pin it down. 
+The good news is that this is easy to deal with. First, we often create models, compare them to the data, and then refine them, tweaking parameters and so on. Models tend to produce better as we give them better inputs. Second, if there is a parameter you know very little about, you can try a bunch of different values^[Thankfully computers do this all very fast with  little fuss!] over a range of possibilities and see how your model outputs change. If it changes very little, great! It probably does not matter a lot. If the results vary a lot as you change the value of the parameter, then you a) know it's an important parameter and b) have a good reason to go ask a funding agency to give you money to go try and pin it down. 
 
 Good modelers are good at this and will provide a sense of what parameters they have confidence in and which are uncertain, as well as what the consequences of that might be. Beware the modeling paper or report that does not address uncertainty! 
 
 
 ## An aside on explaining prior observations vs. predicting the future
-When we say "models predict" we often mean two somewhat different things. The first is that we often are trying to use models to make sense of or explain what has already happened. For instance, the cycles of measles outbreaks in pre-vaccine era United Kingdom have the subject of numerous modeling efforts to try to understand what drove these cycles and related questions about the critical community size^[Essentially the the population size needed for infections to persist], the role of schools in transmission, and the importance of movement between communities. The data are the same and the goal is to use a simple-but-not-too-simple to explain the observed data reasonably well. We might say, "the model predicted that communities smaller than 5000 should have only short-lived, sporadic epidemics," but importantly, we do not mean _in the future_. The world has changed in so many ways since that era (e.g., widespread vaccination, to start) that no one would expect these models to be any good at predicting measles dynamics in the future. They are a tool for research and understanding.
+When we say "models predict" we often mean two somewhat different things. The first is that we often are trying to use models to make sense of or explain what has already happened. For instance, the cycles of measles outbreaks in pre-vaccine era United Kingdom have been the subject of numerous modeling efforts to try to understand what drove these cycles and related questions about the critical community size^[Essentially the the population size needed for infections to persist], the role of schools in transmission, and the importance of movement between communities. The data are the same and the goal is to use a simple-but-not-too-simple model to describe or explain the observed data reasonably well. We might say, "the model predicted that communities smaller than 5000 should have only short-lived, sporadic epidemics," but importantly, we do not mean _in the future_. The world has changed in so many ways since that era (e.g., widespread vaccination) that no one would expect these models to be any good at predicting measles dynamics in the future. They are a tool for research and understanding.
 
 Sometimes, like weather models, we _are_ trying to predict what will happen in the future. We may have a few months of data on, say, COVID-19 hospitalizations and we hope to use those and other data to construct a model that predicts what COVID-19 hospitalizations look like in the future. In a very real sense we construct a model to "predict" the past---essentially tweak the model and parameter values so that they explain the existing dynamics of COVID hospitalizations---in order to predict the future. The hope is that the past predicts the future^[If your spidey senses are tingling, you are right! As I note below, this can be a fraught assumption in a rapidly evolving pandemic!]. If a model can "get it right" in the past, it would seem that it is capturing the essential elements of how things work and should probably do a good job looking forward. 
 
 There is an inherent statistical trade-off between explaining observed data and predicting the future. Think about it this way. Imagine you have an SEIR model of COVID-19 that gets the general dynamics of the epidemic in, say, Seattle. You feel pretty good about it, but you look closer and see that you are missing some of the lows and highs. Perhaps there is a surge in cases at one time and in another cases do not rise as fast as the model predicts. Can you tweak your model to better fit both of those features? Absolutely! Maybe you add another term or make transmission a parabolic function of weather so that it is highest when the weather is warm and dry and very low at other times. Does that make strong biological sense? No idea! But it works! 
 
-You keep at it and keep tweaking until your model does an admirable job of describing the features of the prior data. But when you forecast what should happen your model falls flat, predicting crazy dynamics! What you have done is **over fit** your model, adding lots of complexity to your model to fit what amounted to stochastic, essentially random noise^[You can under fit a model, too, so it does not capture the essential features in the data.]. When you project from this overly complex model, those little added terms and complexities (e.g., transmission as a complex function of weather) can become rather important. For instance, that transmission term that varied with weather? It might make transmission unrealistically low (or high) during warmer summer months. You would have been better off with a simpler model that didn't fit the prior data _too_ well.
+Now imagine you keep tweaking your model until it does an admirable job of describing the features of the prior data. However, when you _forecast_ what should happen in the future you are are likely to see your model predicts crazy, often completely unrealistic dynamics! What you have done is **over fit** your model, adding lots of complexity to your model to fit what amounted to stochastic, essentially random noise^[You can _under_ fit a model, too, so it does not capture the essential features in the data. It, too, will be bad at prediction.]. When you project from this overly complex model, those little added terms and complexities (e.g., transmission as a complex function of weather) can become rather important. For instance, that transmission term that varied with weather? It might make transmission unrealistically low (or high) during warmer summer months. You would have been better off with a simpler model that didn't fit the prior data _too_ well.
 
 This is called the "bias-variance" trade-off and it crops up whenever we use models for prediction. Fortunately, there are statistical approaches to find the sweet spot along the spectrum of complexity. The upshot for you is simply that a good model is not perfect, but that's a good thing! 
 
@@ -72,7 +72,7 @@ In much the same way that the exponential model is missing the phenomenon of fin
 
 The good news from the scientific point of view is that you have just learned something!^[It is true that science progresses more rapidly from "failures" than "successes."] However you were thinking your system worked, you were wrong! Congratulations! Now you just need to sort out _how_ you were wrong and what else is happening.
 
-There is an interesting feedback when making predictive models. The models and results can _change the future_ such that the model no longer applies. Many models of COVID-19 dynamics, for instance, posited that there were no changes in contact rates and so on, that is, that no one did anything about the epidemic. They proved very useful in motivating many interventions^[Remember "flatten the curve"?], but as the world changed those original models were missing something important (e.g., drastically reduced movement and contact rates) and were therefore almost immediately wrong about the future. It's not their fault that the world changed out from under them; had no one done anything, they might well have gotten the dynamics of COVID-19 pretty spot on! Who knows?
+There is an interesting feedback when making predictive models. The models and results can _change the future_ such that the model no longer applies. Many early models of COVID-19 dynamics, for instance, posited that there were no changes in contact rates; that is, they assumed no one did anything about the epidemic. They proved very useful in motivating many interventions^[Remember "flatten the curve"?], but as the world changed, those original models were missing something important (e.g., drastically reduced movement and contact rates) and were therefore almost immediately wrong about the future. It's not their fault that the world changed out from under them; had no one done anything, they might well have gotten the dynamics of COVID-19 pretty spot on! Who knows?
 
 
 # Scale and scope: your model does not do what you want it to do / your data suck
@@ -91,3 +91,5 @@ The answer to this problem is, well, context dependent. Maybe you can find bette
 *  Similarly, we should be better about allowing for uncertainty in forecasts. If a forecast says a 40% chance of rain, that means there is a 40% probability of at least a quarter of a millimeter in that particular place during the forecast. That means that in 40 of 100 forecasts with a 40% chance of rain there will be rain ($>0.25$mm), but in the other 60 there will not be. The fact that it does not rain does not mean the forecast if right (or wrong). That was only one "roll of the dice," so to speak. An elevated risk of COVID-19 infections does not necessarily mean that _you_ will be infected (nor that you will not be infected); it applies to the population as a whole. 
 
 *  It is worth remembering that models can be terribly useful, even if they are not in the business of prediction! Discrete-time (and thus potentially chaotic) logistic growth, Lotka-Voltera predator-prey and competition, metapopulation dynamics, island biogeography, and optimal foraging models are all examples of hugely influential models in ecology that are not intended to predict what happens in any particular system. Instead, they illustrate how particular forces or processes lead to particular outcomes. They help us think through the consequences of different scenarios. Similarly, a simple SIR model may not describe a real-world pandemic very well, but it can be very useful in thinking about which interventions might be the most effective.
+
+*  This leads to my final take-home message: models are often most useful for making projections rather than predictions; running scenarios meant to illustrate what would happen _if_ such and such were true more than the precise level of some response (e.g., COVID-19 cases) at some point in time. That is, they are perhaps most useful for seeing the consequences of different actions (or inaction), assumptions, or causal structures. Sure, they are simplifications of reality and thus, by definition, wrong, but they can be wonderfully useful tools, even when "wrong."
